Don't re-mark words added/ignored to the dictionary as misspelled

Summary:
When a word is added to the dictionary or ignored via the spellingMenu,
the BackgroundChecker instance in ontheflycheck should be updated to
reflect the changes, otherwise words already added to the dictionary
(or ignored) are re-highlited as misspelled when the view changes.

Depends on D17629.

BUG: 387729

Test Plan:
- Open a file with misspelled words in kate and enable automatic
  spellchecking
- Using the context menu:
  - add a misspelled word to the dictionary
  - Ignore another word B
  misspelling highlighting is removed, as expected
- Scroll up/down so that those particular words are out of view then scroll
  and show them again; notice that those words re-highlighted as misspelled
- After applying the pacth, words added/ingored to the dictionary aren't going
  to be re-highlighted as misspelled when the view changes

Reviewers: cullmann, davidedmundson

Reviewed By: cullmann

Subscribers: kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D17630